bundle-cat/src/snapshots/bundle_cat__tests__logs_exec.snap
---
source: bundle-cat/src/main.rs
expression: "String::from_utf8_lossy(&exec_out)"
---
==> rack/34261901-b550-451c-9bd0-3926bb29c40d/sled/690650fd-4f95-4b3a-b2ec-977d47154383/logs/oxz_switch/dendrite/archive/oxide-dendrite:default.log.1758702600 <==
{
  "msg": "loopback entry fd69:644c:516f:ee88::1 already set",
  "v": 0,
  "name": "dpd",
  "level": 20,
  "time": "1986-12-26T07:30:02.0679829Z",
  "hostname": "oxz_switch",
  "pid": 1717
}
{
  "msg": "request completed",
  "v": 0,
  "name": "dpd",
  "level": 30,
  "time": "1986-12-28T07:30:02.068057082Z",
  "hostname": "oxz_switch",
  "pid": 1717,
  "uri": "/loopback/ipv6",
  "method": "POST",
  "req_id": "ce63fccd-fb9e-4a99-a3a8-5c1677740099",
  "remote_addr": "[::1]:60692",
  "local_addr": "[::1]:12224",
  "server_id": "2",
  "unit": "api-server",
  "latency_us": 92,
  "response_code": "204"
}
{
  "msg": "request completed",
  "v": 0,
  "name": "dpd",
  "level": 30,
  "time": "1986-12-28T07:30:02.068201157Z",
  "hostname": "oxz_switch",
  "pid": 1717,
  "uri": "/route/ipv4/0.0.0.0%2F0",
  "method": "GET",
  "req_id": "af76ae57-5dbf-42c2-91c7-9a376a779188",
  "remote_addr": "[::1]:60692",
  "local_addr": "[::1]:12224",
  "server_id": "2",
  "unit": "api-server",
  "latency_us": 49,
  "response_code": "200"
}
{
  "msg": "request completed",
  "v": 0,
  "name": "dpd",
  "level": 30,
  "time": "1986-12-28T07:30:02.068945446Z",
  "hostname": "oxz_switch",
  "pid": 1717,
  "uri": "/ports/qsfp0/links/0",
  "method": "GET",
  "req_id": "d3df6b3b-48e8-4ffb-ab03-1fe07c5e0126",
  "remote_addr": "[::1]:60692",
  "local_addr": "[::1]:12224",
  "server_id": "2",
  "unit": "api-server",
  "latency_us": 78,
  "response_code": "200"
}

==> rack/34261901-b550-451c-9bd0-3926bb29c40d/sled/690650fd-4f95-4b3a-b2ec-977d47154383/logs/oxz_switch/dendrite/current/oxide-dendrite:default.log <==
{
  "msg": "loopback entry fd69:644c:516f:ee88::1 already set",
  "v": 0,
  "name": "dpd",
  "level": 20,
  "time": "1986-12-26T07:30:02.0679829Z",
  "hostname": "oxz_switch",
  "pid": 1717
}
{
  "msg": "request completed",
  "v": 0,
  "name": "dpd",
  "level": 30,
  "time": "1986-12-28T07:30:02.068057082Z",
  "hostname": "oxz_switch",
  "pid": 1717,
  "uri": "/loopback/ipv6",
  "method": "POST",
  "req_id": "ce63fccd-fb9e-4a99-a3a8-5c1677740099",
  "remote_addr": "[::1]:60692",
  "local_addr": "[::1]:12224",
  "server_id": "2",
  "unit": "api-server",
  "latency_us": 92,
  "response_code": "204"
}
{
  "msg": "request completed",
  "v": 0,
  "name": "dpd",
  "level": 30,
  "time": "1986-12-28T07:30:02.068201157Z",
  "hostname": "oxz_switch",
  "pid": 1717,
  "uri": "/route/ipv4/0.0.0.0%2F0",
  "method": "GET",
  "req_id": "af76ae57-5dbf-42c2-91c7-9a376a779188",
  "remote_addr": "[::1]:60692",
  "local_addr": "[::1]:12224",
  "server_id": "2",
  "unit": "api-server",
  "latency_us": 49,
  "response_code": "200"
}
{
  "msg": "request completed",
  "v": 0,
  "name": "dpd",
  "level": 30,
  "time": "1986-12-28T07:30:02.068945446Z",
  "hostname": "oxz_switch",
  "pid": 1717,
  "uri": "/ports/qsfp0/links/0",
  "method": "GET",
  "req_id": "d3df6b3b-48e8-4ffb-ab03-1fe07c5e0126",
  "remote_addr": "[::1]:60692",
  "local_addr": "[::1]:12224",
  "server_id": "2",
  "unit": "api-server",
  "latency_us": 78,
  "response_code": "200"
}
